--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-config-next": "15.0.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-tailwindcss": "^3.18.2",
     "postcss": "^8",
     "prettier": "^3.6.2",
