--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "18.3.1",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.62.0",
+    "recharts": "^2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "use-debounce": "^10.0.6",
